[gd_scene load_steps=10 format=2]

[ext_resource path="res://Textures/Gameplay/dev_tiles.tres" type="TileSet" id=1]
[ext_resource path="res://Scenes/Gameplay/store.gd" type="Script" id=2]
[ext_resource path="res://Fonts/ThaleahFat_TTF.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Textures/UI/button_normal.tres" type="StyleBox" id=4]
[ext_resource path="res://Fonts/thaelahfat_pure_16x.tres" type="DynamicFont" id=5]
[ext_resource path="res://Textures/UI/purchase_item_frame.png" type="Texture" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 21.8409, 33.8456 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 70.3668, 44.2734 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 3 )

[node name="Level" type="Node2D"]
script = ExtResource( 2 )

[node name="World" type="Node2D" parent="."]

[node name="Level" type="TileMap" parent="World"]
tile_set = ExtResource( 1 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( 65535, 0, 0, 20, 3, 0, 131071, 0, 0, 65556, 3, 0, 196607, 0, 0, 131092, 3, 0, 262143, 0, 0, 196628, 3, 0, 327679, 0, 0, 262164, 3, 0, 393215, 0, 0, 327700, 3, 0, 458751, 0, 0, 393236, 3, 0, 524287, 0, 0, 458772, 3, 0, 589823, 0, 0, 524308, 3, 0, 655359, 0, 0, 589831, 3, 0, 589832, 3, 0, 589833, 3, 0, 589834, 3, 0, 589844, 3, 0, 720895, 0, 0, 655360, 1, 0, 655361, 1, 0, 655362, 1, 0, 655363, 1, 0, 655364, 1, 0, 655365, 1, 0, 655366, 1, 0, 655367, 1, 0, 655368, 1, 0, 655369, 1, 0, 655370, 1, 0, 655371, 1, 0, 655372, 1, 0, 655373, 1, 0, 655374, 1, 0, 655375, 1, 0, 655376, 1, 0, 655377, 1, 0, 655378, 1, 0, 655379, 1, 0, 655380, 1, 0, 786431, 0, 0, 720896, 2, 0, 720897, 2, 0, 720898, 2, 0, 720899, 2, 0, 720900, 2, 0, 720901, 2, 0, 720902, 2, 0, 720903, 2, 0, 720904, 2, 0, 720905, 2, 0, 720906, 2, 0, 720907, 2, 0, 720908, 2, 0, 720909, 2, 0, 720910, 2, 0, 720911, 2, 0, 720912, 2, 0, 720913, 2, 0, 720914, 2, 0, 720915, 2, 0, 720916, 2, 0 )

[node name="PortalSpawn" type="Area2D" parent="World"]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="World/PortalSpawn"]
position = Vector2( 616.946, 284.133 )
shape = SubResource( 1 )

[node name="ShopCollider" type="Area2D" parent="World"]
position = Vector2( -331.359, 0.629974 )
collision_layer = 16
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="World/ShopCollider"]
position = Vector2( 620.701, 274.31 )
shape = SubResource( 2 )

[node name="Spawnpoint" type="Node2D" parent="."]
position = Vector2( 532.911, 272.058 )

[node name="UI" type="CanvasLayer" parent="."]
layer = 2

[node name="Store" type="Panel" parent="UI"]
visible = false
self_modulate = Color( 1, 1, 1, 0.705882 )
margin_left = 16.0
margin_top = 16.0
margin_right = 320.0
margin_bottom = 344.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TabContainer" type="TabContainer" parent="UI/Store"]
margin_right = 304.0
margin_bottom = 328.0
tab_align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Weapon" type="Tabs" parent="UI/Store/TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="ScrollContainer" type="ScrollContainer" parent="UI/Store/TabContainer/Weapon"]
margin_right = 164.0
margin_bottom = 288.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="UI/Store/TabContainer/Weapon/ScrollContainer"]
margin_right = 164.0
rect_min_size = Vector2( 164, 0 )
rect_clip_content = true

[node name="DescriptionPanel" type="Panel" parent="UI/Store/TabContainer/Weapon"]
anchor_left = 0.581
anchor_top = 0.384
anchor_right = 0.986
anchor_bottom = 0.849
margin_left = 0.0239868
margin_top = -0.127998
margin_right = 0.143982
margin_bottom = -7.908
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Description" type="Label" parent="UI/Store/TabContainer/Weapon"]
anchor_left = 0.608
anchor_top = 0.411
anchor_right = 0.959
anchor_bottom = 0.795
margin_left = 0.0319824
margin_top = -0.012001
margin_right = 0.135986
margin_bottom = -0.139999
custom_fonts/font = SubResource( 3 )
text = "Description here"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PurchaseButton" type="Button" parent="UI/Store/TabContainer/Weapon"]
anchor_left = 0.581
anchor_top = 0.849
anchor_right = 0.986
anchor_bottom = 0.986
margin_left = 0.0239868
margin_top = 0.0919952
margin_right = 0.143982
margin_bottom = 0.0879822
custom_styles/normal = ExtResource( 4 )
custom_fonts/font = ExtResource( 5 )
text = "PURCHASE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EquipFrame" type="TextureRect" parent="UI/Store/TabContainer/Weapon"]
margin_left = 172.0
margin_right = 292.0
margin_bottom = 104.0
texture = ExtResource( 6 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Equip" type="TextureRect" parent="UI/Store/TabContainer/Weapon"]
anchor_left = 0.662
anchor_top = 0.055
anchor_right = 0.905
anchor_bottom = 0.301
margin_left = 0.0479889
margin_top = -0.0600014
margin_right = 0.119995
margin_bottom = 0.107994
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Armor" type="Tabs" parent="UI/Store/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="ScrollContainer" type="ScrollContainer" parent="UI/Store/TabContainer/Armor"]
margin_right = 164.0
margin_bottom = 288.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="UI/Store/TabContainer/Armor/ScrollContainer"]
margin_right = 164.0
rect_min_size = Vector2( 164, 0 )
rect_clip_content = true

[node name="DescriptionPanel" type="Panel" parent="UI/Store/TabContainer/Armor"]
anchor_left = 0.581
anchor_top = 0.384
anchor_right = 0.986
anchor_bottom = 0.849
margin_left = 0.0239868
margin_top = -0.127998
margin_right = 0.143982
margin_bottom = -7.908
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Description" type="Label" parent="UI/Store/TabContainer/Armor"]
anchor_left = 0.608
anchor_top = 0.411
anchor_right = 0.959
anchor_bottom = 0.795
margin_left = 0.0319824
margin_top = -0.012001
margin_right = 0.135986
margin_bottom = -0.139999
custom_fonts/font = SubResource( 3 )
text = "Description here"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PurchaseButton" type="Button" parent="UI/Store/TabContainer/Armor"]
anchor_left = 0.581
anchor_top = 0.849
anchor_right = 0.986
anchor_bottom = 0.986
margin_left = 0.0239868
margin_top = 0.0919952
margin_right = 0.143982
margin_bottom = 0.0879822
custom_styles/normal = ExtResource( 4 )
custom_fonts/font = ExtResource( 5 )
text = "PURCHASE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EquipFrame" type="TextureRect" parent="UI/Store/TabContainer/Armor"]
margin_left = 172.0
margin_right = 292.0
margin_bottom = 104.0
texture = ExtResource( 6 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Equip" type="TextureRect" parent="UI/Store/TabContainer/Armor"]
anchor_left = 0.662
anchor_top = 0.055
anchor_right = 0.905
anchor_bottom = 0.301
margin_left = 0.0479889
margin_top = -0.0600014
margin_right = 0.119995
margin_bottom = 0.107994
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Item" type="Tabs" parent="UI/Store/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="ScrollContainer" type="ScrollContainer" parent="UI/Store/TabContainer/Item"]
margin_right = 164.0
margin_bottom = 288.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="UI/Store/TabContainer/Item/ScrollContainer"]
margin_right = 164.0
rect_min_size = Vector2( 164, 0 )
rect_clip_content = true

[node name="DescriptionPanel" type="Panel" parent="UI/Store/TabContainer/Item"]
anchor_left = 0.581
anchor_top = 0.384
anchor_right = 0.986
anchor_bottom = 0.849
margin_left = 0.0239868
margin_top = -0.127998
margin_right = 0.143982
margin_bottom = -7.908
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Description" type="Label" parent="UI/Store/TabContainer/Item"]
anchor_left = 0.608
anchor_top = 0.411
anchor_right = 0.959
anchor_bottom = 0.795
margin_left = 0.0319824
margin_top = -0.012001
margin_right = 0.135986
margin_bottom = -0.139999
custom_fonts/font = SubResource( 3 )
text = "Description here"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PurchaseButton" type="Button" parent="UI/Store/TabContainer/Item"]
anchor_left = 0.581
anchor_top = 0.849
anchor_right = 0.986
anchor_bottom = 0.986
margin_left = 0.0239868
margin_top = 0.0919952
margin_right = 0.143982
margin_bottom = 0.0879822
custom_styles/normal = ExtResource( 4 )
custom_fonts/font = ExtResource( 5 )
text = "PURCHASE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EquipFrame" type="TextureRect" parent="UI/Store/TabContainer/Item"]
margin_left = 172.0
margin_right = 292.0
margin_bottom = 104.0
texture = ExtResource( 6 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Equip" type="TextureRect" parent="UI/Store/TabContainer/Item"]
anchor_left = 0.662
anchor_top = 0.055
anchor_right = 0.905
anchor_bottom = 0.301
margin_left = 0.0479889
margin_top = -0.0600014
margin_right = 0.119995
margin_bottom = 0.107994
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Items" type="Node2D" parent="."]

[connection signal="body_entered" from="World/PortalSpawn" to="." method="_on_PortalSpawn_body_entered"]
[connection signal="body_entered" from="World/ShopCollider" to="." method="_on_ShopCollider_body_entered"]
[connection signal="body_exited" from="World/ShopCollider" to="." method="_on_ShopCollider_body_exited"]
[connection signal="pressed" from="UI/Store/TabContainer/Weapon/PurchaseButton" to="." method="_on_PurchaseButton_pressed"]
